--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ubereats",
   "version": "0.1.0",
+  "homepage": "https://gSarciotto.github.io/uber-eats-clone",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
